# rs-dean

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  deny.toml
.agents/skills/bevy-019/: SKILL.md
.agents/skills/five-phase-pass/: SKILL.md
.agents/skills/idb/: SKILL.md
.agents/skills/rust-modern/: SKILL.md
.github/workflows/: ci.yml  pages.yml
_issues/: 00-index.md  01-accordion.md  02-alert.md  03-alert-dialog.md  04-aspect-ratio.md  05-attachment.md  06-avatar.md  07-badge.md  08-breadcrumb.md  09-bubble.md  10-button.md  11-button-group.md  12-calendar.md  13-card.md  14-carousel.md  15-chart.md  16-checkbox.md  17-collapsible.md  18-combobox.md  19-command.md  20-context-menu.md  21-data-table.md  22-date-picker.md  23-dialog.md  24-direction.md  25-drawer.md  26-dropdown-menu.md  27-empty.md  28-field.md  29-hover-card.md  30-input.md  31-input-group.md  32-input-otp.md  33-item.md  34-kbd.md  35-label.md  36-marker.md  37-menubar.md  38-message.md  39-message-scroller.md  (+26 more)
_issues/blocks/: 00-index.md  001-marketing-sections-heroes-01-simple-centered.md  002-marketing-sections-heroes-02-split-with-screenshot.md  003-marketing-sections-heroes-03-split-with-bordered-screenshot.md  004-marketing-sections-heroes-04-split-with-code-example.md  005-marketing-sections-heroes-05-simple-centered-with-background-image.md  006-marketing-sections-heroes-06-with-bordered-app-screenshot.md  007-marketing-sections-heroes-07-with-app-screenshot.md  008-marketing-sections-heroes-08-with-phone-mockup.md  009-marketing-sections-heroes-09-split-with-image.md  010-marketing-sections-heroes-10-with-angled-image-on-right.md  011-marketing-sections-heroes-11-with-image-tiles.md  012-marketing-sections-heroes-12-with-offset-image.md  013-marketing-sections-feature-sections-01-with-product-screenshot.md  014-marketing-sections-feature-sections-02-with-large-screenshot.md  015-marketing-sections-feature-sections-03-with-large-bordered-screenshot.md  016-marketing-sections-feature-sections-04-simple-three-column-with-small-icons.md  017-marketing-sections-feature-sections-05-with-product-screenshot-on-left.md  018-marketing-sections-feature-sections-06-simple-three-column-with-large-icons.md  019-marketing-sections-feature-sections-07-contained-in-panel.md  020-marketing-sections-feature-sections-08-with-product-screenshot-panel.md  021-marketing-sections-feature-sections-09-with-testimonial.md  022-marketing-sections-feature-sections-10-offset-2x2-grid.md  023-marketing-sections-feature-sections-11-with-code-example-panel.md  024-marketing-sections-feature-sections-12-offset-with-feature-list.md  025-marketing-sections-feature-sections-13-simple.md  026-marketing-sections-feature-sections-14-centered-2x2-grid.md  027-marketing-sections-feature-sections-15-simple-3x2-grid.md  028-marketing-sections-cta-sections-01-dark-panel-with-app-screenshot.md  029-marketing-sections-cta-sections-02-simple-stacked.md  030-marketing-sections-cta-sections-03-centered-on-dark-panel.md  031-marketing-sections-cta-sections-04-simple-centered.md  032-marketing-sections-cta-sections-05-simple-centered-with-gradient.md  033-marketing-sections-cta-sections-06-simple-centered-on-brand.md  034-marketing-sections-cta-sections-07-simple-justified.md  035-marketing-sections-cta-sections-08-simple-justified-on-subtle-brand.md  036-marketing-sections-cta-sections-09-split-with-image.md  037-marketing-sections-cta-sections-10-two-columns-with-photo.md  038-marketing-sections-cta-sections-11-with-image-tiles.md  039-marketing-sections-bento-grids-01-three-column-bento-grid.md  (+619 more)
_issues/ui/: 03-alert-dialog.md  04-aspect-ratio.md  07-badge.md  10-button.md  14-carousel.md  15-chart.md  20-context-menu.md  27-empty.md  32-input-otp.md  35-label.md  37-menubar.md  38-message.md  39-message-scroller.md  47-scroll-area.md  50-sheet.md  56-switch.md  62-toggle-group.md
apps/cube-smoke/: Cargo.toml  index.html
apps/cube-smoke/styles/: index.css
apps/game/: Cargo.toml  Trunk.toml  index.html
apps/game/src/: main.rs
apps/game/styles/: index.css
apps/marketing/: Cargo.toml  index.html
apps/marketing/public/: llms.txt
apps/marketing/src/: main.rs
apps/marketing/styles/: index.css
apps/stories/: Cargo.toml  Trunk.toml  index.html
apps/stories/public/: .gitkeep
apps/stories/src/: main.rs
apps/stories/styles/: index.css
apps/ui-bevy-stories/: Cargo.toml  Trunk.toml  index.html
apps/ui-bevy-stories/src/: main.rs
apps/ui-bevy-stories/styles/: index.css
apps/web/: Cargo.toml  Trunk.toml  index.html
apps/web/public/: llms.txt
apps/web/src/: main.rs
apps/web/styles/: index.css
crates/bevy-scenes/: Cargo.toml
crates/bevy-scenes/src/: lib.rs
crates/blocks/: Cargo.toml
crates/blocks/src/: bevy_adapter.rs  catalog.rs  catalog_data.rs  leptos_renderer.rs  lib.rs  model.rs  plan.rs
crates/cards/: Cargo.toml
crates/cards/src/: lib.rs
crates/curriculum/: Cargo.toml
crates/idb/: Cargo.toml
crates/idb/src/: browser.rs  lib.rs  native.rs
crates/schema/: Cargo.toml
crates/srs/: Cargo.toml
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/tests/: refresh_hydration.rs
crates/ui/: Cargo.toml
crates/ui/src/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  attachment.rs  avatar.rs  badge.rs  breadcrumb.rs  bubble.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  catalog.rs  catalog_components.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  components.rs  context_menu.rs  data_table.rs  date_picker.rs  dialog.rs  direction.rs  dom.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  kit.rs  label.rs  (+35 more)
crates/ui/styles/: theme.css
crates/vector-dungeon/: Cargo.toml
templates/app/: Cargo.toml  Trunk.toml  index.html
templates/app/cube-smoke/: Cargo.toml  Trunk.toml
templates/app/cube-smoke/src/: main.rs
templates/app/public/: llms.txt
templates/app/src/: main.rs
templates/app/styles/: index.css
xtask/: Cargo.toml
xtask/src/: main.rs
(+736 files in other folders)
