[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
command-fds.workspace = true
os_pipe.workspace = true
png.workspace = true
rs-dean-ui = { path = "../crates/ui", version = "0.1.0", default-features = false }
serde_json.workspace = true

[lints]
workspace = true
