[package]
name = "rs-dean-marketing"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.rs-dean.pages]
kind = "marketing"
publish = true
route = "marketing"
title = "Marketing"

[package.metadata.rs-dean.constraints]
require_persistent_state = true

[dependencies]
console_error_panic_hook.workspace = true
leptos.workspace = true
rs-dean-state = { path = "../../crates/state", version = "0.1.0" }
rs-dean-ui = { path = "../../crates/ui", version = "0.1.0" }

[lints]
workspace = true
