[package]
name = "rs-dean-stories"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.rs-dean.pages]
kind = "stories"
publish = false
route = "stories"
title = "Stories"

[dependencies]
console_error_panic_hook.workspace = true
leptos.workspace = true
rs-dean-ui = { path = "../../crates/ui", version = "0.1.0" }

[lints]
workspace = true
