[package]
name = "rs-dean-stories"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.rs-dean.pages]
kind = "stories"
publish = true
route = "stories"
title = "Stories"

[dependencies]
console_error_panic_hook.workspace = true
leptos.workspace = true
rs-dean-blocks = { path = "../../crates/blocks", version = "0.1.0" }
rs-dean-ui = { path = "../../crates/ui", version = "0.1.0" }
web-sys = { workspace = true, features = ["Location", "Window"] }

[lints]
workspace = true
