[package]
name = "rs-dean-ui-bevy-stories"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.rs-dean.pages]
kind = "ui-bevy-stories"
publish = true
route = "ui-bevy-stories"
title = "UI Bevy Stories"

[package.metadata.rs-dean.constraints]
forbid_leptos = true
require_bevy = true

[dependencies]
bevy = { workspace = true, features = [
    "bevy_ui",
    "bevy_ui_render",
    "bevy_ui_widgets",
    "default_font",
    "keyboard",
    "mouse",
    "touch",
    "ui_picking",
] }
console_error_panic_hook.workspace = true
rs-dean-blocks = { path = "../../crates/blocks", version = "0.1.0", default-features = false, features = [
    "bevy",
] }
rs-dean-ui = { path = "../../crates/ui", version = "0.1.0", default-features = false, features = [
    "bevy",
] }
web-sys = { workspace = true, features = ["Document", "Element", "Location", "Window"] }

[lints]
workspace = true
