[package]
name = "rs-dean-web"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
leptos.workspace = true
rs-dean-curriculum = { path = "../../crates/curriculum", version = "0.1.0" }
rs-dean-ui = { path = "../../crates/ui", version = "0.1.0" }

[lints]
workspace = true
