[package]
name = "rs-dean-bevy-scenes"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bevy.workspace = true
rs-dean-ui = { path = "../ui", version = "0.1.0", default-features = false, features = [
    "bevy",
] }

[lints]
workspace = true
