[package]
name = "rs-dean-idb"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "DomException",
    "DomStringList",
    "Event",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "Window",
] }

[dev-dependencies]
serde.workspace = true

[lints]
workspace = true
