[package]
name = "rs-dean-ui"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["leptos"]
bevy = ["dep:bevy"]
leptos = ["dep:leptos", "dep:web-sys"]

[dependencies]
bevy = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "Document",
    "Element",
    "Window",
], optional = true }

[lints]
workspace = true
