[package]
name = "rs-dean-{{name}}"
edition = "2024"
publish = false
rust-version = "1.96.1"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.20", features = ["csr"] }
rs-dean-schema = { path = "../../crates/schema" }
rs-dean-state = { path = "../../crates/state" }

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
